--- a/package.json
+++ b/package.json
@@ -14,12 +14,18 @@
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.18.1",
+    "ckeditor4-vue": "^1.2.0",
     "core-js": "^3.6.5",
     "dom-to-image": "^2.6.0",
     "highcharts": "^8.2.2",
     "highcharts-vue": "^1.3.5",
     "html-to-image": "^0.1.1",
     "html2canvas": "^1.0.0-rc.7",
+    "quill": "^1.3.7",
+    "quill-image-drop-module": "^1.0.3",
+    "quill-image-resize": "^3.0.9",
+    "quill-image-resize-module": "^3.0.0",
+    "quill-image-resize-vue": "^1.0.4",
     "register-service-worker": "^1.7.1",
     "sweetalert2": "^10.8.1",
     "vue": "^2.6.11",
@@ -29,6 +35,7 @@
     "vue-nav-tabs": "^0.5.7",
     "vue-qr": "^2.3.0",
     "vue-qrcode-reader": "^2.3.14",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.2.0",
     "vue-smooth-scroll": "^1.0.13",
     "vue-tabs-with-active-line": "^1.2.6",
